--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body>
+  <body style="display: flex; flex-direction: column; ">
     <div id="root"></div>
+    <div id="mml-root"></div>
+
     <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/bundle.js"></script>
+
   </body>
 </html>
